tests/snapshots/aether/aether__aether__bench_reuse__dump_aether.snap
---
source: tests/aether_cli_snapshots.rs
---
Warning: FBIP Contract Not Proven

@fip on `my_map` analysis result NotProvable:
- fresh heap allocation remains on at least one path
- calls indirect or opaque callee `f` whose FBIP behavior is unknown
- control-flow join loses a precise allocation bound across paths

  examples/aether/bench_reuse.flx:16:6
   |
16 | @fip fn my_map(xs, f) {
   |      ^^^^^^^^^^^^^^^^^^
17 |     match xs {
   | ^^^^^^^^^^^^^^
18 |         [h | t] -> [f(h) | my_map(t, f)],
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
19 |         _ -> [],
   | ^^^^^^^^^^^^^^^^
20 |     }
   | ^^^^^
21 | }
   | ^


error[E004]: Undefined Variable

I can't find a value named `unwrap`.

  examples/aether/bench_reuse.flx:83:33
   |
83 |     print("map: result head = #{unwrap(first(mapped))}")
   |                                 ^^^^^^

Hint:
  Define it first: let unwrap = ...;

Found 1 error and 1 warning.
